# LLM-course

./: .gitignore  02_Prompt_LangChain_LlamaIndex.ipynb  README.md  hw_2.ipynb  hw_3.ipynb  pyproject.toml  pytest.ini  requirements.txt  test_hw_1_example.py
hw-1/: hw_1.py
hw-2/: hw_2.ipynb  requirements.txt
