[tool.poetry]
name = "hw-1"
version = "0.1.0"
description = ""
authors = ["Mark Basov <basovmark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.2"
gigachain = "0.2.6"
gigachain_community="0.2.6"
gigachain-cli = "0.0.25"
duckduckgo-search="6.2.4 "
pyfiglet="1.0.2" 
llama_index="0.9.40" 
pypdf="4.0.1" 
sentence_transformers="2.3.1"
langchain-anthropic = "^0.2.3"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
